--- a/bDot/wonikips/ko/stylesheets/css/common.css
+++ b/bDot/wonikips/ko/stylesheets/css/common.css
@@ -3088,7 +3088,7 @@ caption { width: 1px; height: 1px; overflow: hidden; margin: -1px; }
 .esg-summary__info{position:absolute;left:0;bottom:0;width:100%;height:62px;padding:0 30px;box-sizing:border-box;color:#fff;transition:all .5s ease-in-out}
 .esg-summary__title{font-size:30px;line-height:32px;font-weight:700}
 .esg-summary__title > b{margin-left:2px;font-size:22px;line-height:22px;font-weight:500}
-.esg-summary__hide{margin-top:20px;font-weight:500;opacity:0;transition:all .3s ease-in-out .3s}
+.esg-summary__hide{ margin-top:20px; font-weight:500; opacity:0; transition:all .3s ease-in-out .3s; -webkit-transition:all .3s ease-in-out .3s; -moz-transition:all .3s ease-in-out .3s; -ms-transition:all .3s ease-in-out .3s; -o-transition:all .3s ease-in-out .3s; }
 .esg-summary__slogan{font-size:16px;line-height:22px}
 .esg-summary__box .esg-summary__link{display:inline-block;position:relative;margin-top:20px;padding:12px 18px;padding-right:28px;border:1px solid #fff;font-size:12px;line-height:1}
 .esg-summary__link:after{content:'';display:inline-block;position:absolute;right:18px;top:50%;margin-top:-4px;width:4px;height:8px;background:url(../../images/esg/icon-esg-summary-right.svg) 50% 50% no-repeat}
