--- a/bDot/bemCss/css/common_bak.css
+++ b/bDot/bemCss/css/common_bak.css
@@ -185,10 +185,10 @@ body {
   top: 107px;
   left: 31px;
   right: 30px;
-  height: 65px;
+  height: auto;
   z-index: 998;
   overflow: hidden;
-  min-height: 65px;
+  min-height: 166px;
 }
 
 /*swiper관련*/
@@ -529,25 +529,18 @@ body::-webkit-scrollbar-track {
   overflow: hidden;
   z-index: 999;
 }
-.botmenuwrap__whitebackground {
-  height: 80px;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: white;
-}
 
 .botmenu {
   height: 100%;
   width: 100%;
   position: absolute;
-  bottom: 0%;
+  top: 0%;
   position: absolute;
   left: 0;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url("../img/main/floating.svg");
+  background-image: url("../img/main/botMenuUse.png");
 }
 
 .filterbg {
@@ -1122,20 +1115,10 @@ body::-webkit-scrollbar-track {
   width: 100%;
   height: 100%;
   display: block;
-  position: relative;
 }
 .onlyImgSlideItem__imgframe .IMG {
   width: 100%;
   height: 100%;
-  display: block;
-}
-.onlyImgSlideItem__imgframe .instaicon {
-  position: absolute;
-  right: 9px;
-  top: 11px;
-  display: block;
-  width: 20px;
-  height: 20px;
   display: block;
 }
 
@@ -1203,10 +1186,6 @@ body::-webkit-scrollbar-track {
   overflow: hidden;
   height: 49px;
   font-weight: 400;
-  word-wrap: break-word;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
 }
 .columnList__itemlink {
   padding-top: 25px;
@@ -1683,7 +1662,7 @@ body::-webkit-scrollbar-track {
 .productThumbsViewSwiper__slider {
   width: 75px !important;
   height: 75px !important;
-  background-color: white;
+  background-color: #a7a7a7;
   margin-right: 8px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -2037,245 +2016,6 @@ body::-webkit-scrollbar-track {
   margin-right: 10px !important;
 }
 .pdsection04__revbar {
-  width: 335px;
-  height: 1px;
-  background-color: #212121;
-  display: block;
-  margin-bottom: 50px;
-}
-
-.revPictureframe {
-  width: 100%;
-  height: 100%;
-  display: block;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.radianpdsection01 {
-  display: block;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-.radianpdsection01__topPart {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-.radianpdsection01__topPart img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-.radianpdsection01__options {
-  width: 100%;
-  height: auto;
-}
-.radianpdsection01__options img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-.radianpdsection01__buybutton {
-  margin-top: 10px;
-  width: 100%;
-  height: auto;
-}
-.radianpdsection01__description {
-  margin-top: 70px;
-  padding-bottom: 70px;
-}
-.radianpdsection01__description img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.radianpdsection02 {
-  display: block;
-  padding-bottom: 50px;
-}
-.radianpdsection02__accordList {
-  display: block;
-}
-.radianpdsection02__accordItem {
-  display: block;
-}
-.radianpdsection02__accordCont {
-  display: block;
-}
-.radianpdsection02__accordSubchild {
-  display: block;
-  padding-top: 40px;
-}
-.radianpdsection02__howtovideo {
-  display: block;
-  height: auto;
-}
-.radianpdsection02__howtovideo img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-.radianpdsection02__howtodesc {
-  display: block;
-  margin-top: 40px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 70px;
-}
-.radianpdsection02__howtodesc img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-.pdsection03 {
-  display: block;
-  margin-top: 50px;
-  text-align: left;
-}
-.pdsection03__inner {
-  width: 100%;
-  height: auto;
-  padding-left: 20px;
-}
-.pdsection03__tit {
-  padding-right: 20px;
-  width: 100%;
-  height: auto;
-  font-size: 32px;
-  font-weight: 700;
-  line-height: 40px;
-  color: #212121;
-}
-.pdsection03__swiperArea {
-  padding-top: 40px !important;
-  padding-bottom: 70px !important;
-}
-.pdsection03__swiperslide {
-  width: 196px !important;
-  height: auto;
-  display: block;
-  margin-right: 12px;
-}
-.pdsection03__swiperslide img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-.radionpdsection03__tit {
-  width: 323px;
-  height: auto;
-}
-.radionpdsection03__tit img {
-  width: 100%;
-  height: auto;
-}
-
-.SlideItem {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-.SlideItem img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-.radianpdsection04 {
-  display: block;
-  /*swiper-container*/
-  /*swiper-slide*/
-}
-.radianpdsection04__inner {
-  width: 100%;
-  height: auto;
-  display: block;
-  padding-left: 20px;
-  padding-bottom: 60px;
-}
-.radianpdsection04__tit {
-  padding-bottom: 40px;
-  font-size: 32px;
-  font-weight: 700;
-  line-height: 36px;
-  color: #212121;
-}
-.radianpdsection04__reviewPercent {
-  padding-right: 20px;
-  width: 100%;
-  display: block;
-  padding-bottom: 40px;
-}
-.radianpdsection04__reviewPercent img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-.radianpdsection04__revList {
-  width: 100%;
-  height: auto;
-}
-.radianpdsection04__revItem {
-  display: block;
-  height: auto;
-}
-.radianpdsection04__revscore:nth-child(1) {
-  width: 215px;
-  height: auto;
-  display: block;
-}
-.radianpdsection04__revscore:nth-child(1) img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-.radianpdsection04__revscore:nth-child(2) {
-  width: 174px;
-  height: auto;
-  display: block;
-}
-.radianpdsection04__revscore:nth-child(2) img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-.radianpdsection04__revcomment {
-  padding-top: 24px;
-  width: 100%;
-  padding-right: 20px;
-}
-.radianpdsection04__revcomment img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-.radianpdsection04__revdate {
-  margin-top: 26px;
-  width: 100%;
-  padding-right: 20px;
-}
-.radianpdsection04__revdate img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-.radianpdsection04__revPictures {
-  padding-top: 30px !important;
-  padding-bottom: 31px !important;
-}
-.radianpdsection04__revPictureitem {
-  width: 100px !important;
-  height: 100px !important;
-  overflow: hidden;
-  position: relative;
-  margin-right: 10px !important;
-}
-.radianpdsection04__revbar {
   width: 335px;
   height: 1px;
   background-color: #212121;
