--- a/bDot/bemCss/css/common.css
+++ b/bDot/bemCss/css/common.css
@@ -8,6 +8,7 @@
   text-decoration: none;
   box-sizing: border-box;
   vertical-align: top;
+  font-family: "Campton";
 }
 
 html, body {
@@ -191,6 +192,16 @@ body {
   min-height: 65px;
 }
 
+.rightNavMenuWrap {
+  position: fixed;
+  top: 107px;
+  right: 30px;
+  height: 666px;
+  width: 235px;
+  z-index: 9999;
+  overflow: hidden;
+}
+
 /*swiper관련*/
 .swiper-pagination-bulletStyle {
   bottom: 30px !important;
@@ -225,6 +236,8 @@ body {
   display: inline-flex;
   width: auto !important;
   align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .swiper-pagination-basicstyle .swiper-pagination-bullet {
@@ -236,6 +249,13 @@ body {
 .swiper-pagination-basicstyle .swiper-pagination-bullet-active {
   background-color: #666;
   opacity: 1;
+}
+
+.swiper-pagination-basicstyle_navi {
+  bottom: 40px !important;
+  left: auto !important;
+  display: flex !important;
+  width: 100% !important;
 }
 
 /*@font-face {
@@ -547,7 +567,8 @@ body::-webkit-scrollbar-track {
   left: 0;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url("../img/main/floating.svg");
+  background-image: url("../img/main/botMenubg.png");
+  background-size: contain;
 }
 
 .filterbg {
@@ -584,6 +605,205 @@ body::-webkit-scrollbar-track {
   width: 100%;
   height: 100%;
   display: block;
+}
+
+/*rightmenu navi관련*/
+.rightNavBg {
+  width: 375px;
+  height: 100%;
+  display: block;
+  position: absolute;
+  z-index: 1008;
+  background-color: rgba(0, 0, 0, 0.7);
+  right: 0;
+  top: 0;
+}
+
+.rightnavi {
+  width: 235px;
+  height: 666px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: white;
+  color: #212121;
+  position: relative;
+  z-index: 9;
+}
+.rightnavi__inner {
+  padding-left: 20px;
+  padding-right: 20px;
+  overflow-y: auto;
+  height: 100%;
+}
+.rightnavi__tit {
+  padding-top: 70px;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 18px;
+  padding-bottom: 50px;
+}
+.rightnavi__close {
+  width: 20px;
+  height: 20px;
+  right: 20px;
+  top: 20px;
+  position: absolute;
+  display: block;
+  z-index: 90;
+}
+.rightnavi__menulist {
+  padding-bottom: 5px;
+}
+.rightnavi__menuitem {
+  padding-bottom: 40px;
+}
+.rightnavi__usermenu {
+  display: block;
+}
+.rightnavi__usermenuitem {
+  padding-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+.rightnavi__usermenuicon {
+  width: 12px;
+  height: 12px;
+  margin-right: 7px;
+}
+.rightnavi__uermenutxt {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 13px;
+}
+.rightnavi__navibanner {
+  display: block;
+}
+.rightnavi__prevRootlink {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  padding-bottom: 50px;
+  padding-top: 70px;
+}
+.rightnavi__prevRooticon {
+  width: 5px;
+  height: 10px;
+  display: block;
+}
+.rightnavi__prevMenutxt {
+  padding-left: 10px;
+  font-size: 14px;
+  line-height: 12px;
+  font-weight: 700;
+}
+.rightnavi__depth2Tit {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 20px;
+  padding-bottom: 24px;
+}
+.rightnavi__depth2menuList {
+  display: block;
+}
+.rightnavi__depth2menuitem {
+  padding-bottom: 25px;
+}
+.rightnavi__depth2 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  right: 0;
+  top: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+  overflow-y: auto;
+  z-index: 5;
+  background-color: white;
+  text-align: left;
+}
+
+.navihorizontalmenuaccordion {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.navihorizontalmenuaccordion__txt {
+  font-size: 16px;
+  line-height: 14px;
+  font-weight: 500;
+}
+.navihorizontalmenuaccordion__icon {
+  width: 9px;
+  height: 5px;
+}
+.navihorizontalmenuaccordion__subchild {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 20px;
+}
+.navihorizontalmenuaccordion__subchilditem {
+  padding-bottom: 20px;
+  font-size: 12px;
+  line-height: 1.2;
+  letter-spacing: -0.24px;
+  font-weight: 400;
+}
+.navihorizontalmenuaccordion__subchilditem:last-child {
+  padding-bottom: 0;
+}
+
+/*rightmenu하위 관련 related styless*/
+.navihorizontalmenu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navihorizontalmenu__txt {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 14px;
+}
+
+.navihorizontalmenu__linkicon {
+  width: 5px;
+  height: 10px;
+  display: block;
+}
+
+.rightmenuSwiper {
+  padding-top: 50px !important;
+  padding-bottom: 80px !important;
+}
+
+.rightmenuSwiper__slide {
+  width: 100%;
+  height: auto;
+}
+
+.rightmenuSwiper__imgframe {
+  width: 100%;
+  height: 145px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.rightmenuSwiper__tit {
+  margin-top: 25px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 16px;
+  padding-bottom: 15px;
+}
+
+.rightmenuSwiper__desc {
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: -0.28px;
+  line-height: 1.1;
 }
 
 /*=========mainpage group styles=======================*/
